<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:visibility="visible"
        android:id="@+id/phoneReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp">

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curved_searchbar_bg"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/email"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="15dp"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/personName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curved_searchbar_bg"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/profile"
                    android:gravity="center_vertical"
                    android:paddingBottom="15dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="15dp"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/upperlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/upperhalfcurved_bg"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="We have sent a “6 digit OTP”"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:text="on"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/phoneNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="+919999999999"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>


                <Button
                    android:id="@+id/edit"
                    android:layout_width="54dp"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/curved_white_bg"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Edit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:focusable="true"/>

            </LinearLayout>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/bottomlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:weightSum="3"
                android:background="@drawable/curved_bgwithline_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upperlay">


                <TextView
                    android:id="@+id/otp_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/please_enter_valid_otp_below"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/otpET1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/curved_otp_bg"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/otpET2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/curved_otp_bg"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:inputType="number"
                        android:maxLength="1"
                        android:layout_marginStart="10dp"/>

                    <EditText
                        android:id="@+id/otpET3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/curved_otp_bg"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:inputType="number"
                        android:maxLength="1"
                        android:layout_marginStart="10dp"/>

                    <EditText
                        android:id="@+id/otpET4"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/curved_otp_bg"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"/>

                    <EditText
                        android:id="@+id/otpET5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/curved_otp_bg"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"/>

                    <EditText
                        android:id="@+id/otpET6"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/curved_otp_bg"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:textSize="20sp"
                        android:layout_marginStart="10dp"/>


                </LinearLayout>


                <TextView
                    android:id="@+id/resendOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/resend_otp"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/termsC"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomlay">


                <TextView
                    android:id="@+id/termnCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="By creating account, I agree to DOJO's Terms and\nConditions and Privacy Policy"
                    android:textSize="12sp" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/phoneReg">

        <Button
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:visibility="gone"
            android:layout_marginStart="30dp"
            android:background="@drawable/curved_green_bg"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="20dp"
            android:text="@string/create_account"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/submit"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/curved_green_bg"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:padding="20dp"
            android:text="@string/submit"
            android:textColor="@color/white" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>